kubernetes/apps/base/monitoring/grafana/instance/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  annotations:
    item.homer.rajsingh.info/name: "Grafana"
    item.homer.rajsingh.info/subtitle: "Analytics & Monitoring"
    item.homer.rajsingh.info/logo: "https://cdn.jsdelivr.net/gh/walkxcode/dashboard-icons/png/grafana.png"
    item.homer.rajsingh.info/keywords: "monitoring, metrics, dashboard, visualization"
    service.homer.rajsingh.info/name: "Infrastructure"
    service.homer.rajsingh.info/icon: "fas fa-server"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: home
      sectionName: ${CLUSTER_DOMAIN_LISTENER}
  hostnames:
    - "grafana.${CLUSTER_DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            hostname: "grafana.${COMMON_DOMAIN}"
            port: 443
            statusCode: 301
